// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard and Grading NavLinks render for Role.Staff 1`] = `
<Blueprint5.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint5.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="flame"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="lightbulb"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="predictive-analysis"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="comparison"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="manual"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint5.NavbarGroup>
  <Blueprint5.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Ground Control"
      to="/courses/0/groundcontrol"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="satellite"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Ground Control
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Dashboard"
      to="/courses/0/dashboard"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="globe"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Dashboard
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Sourcereel"
      to="/courses/0/sourcereel"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="mobile-video"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Sourcereel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Grading"
      to="/courses/0/grading"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="endorsed"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Grading
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Game Simulator"
      to="/courses/0/gamesimulator"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="crown"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Game Simulator
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="notifications"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint5.NavbarGroup>
</Blueprint5.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
<Blueprint5.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint5.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="flame"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="lightbulb"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="predictive-analysis"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="comparison"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="manual"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint5.NavbarGroup>
  <Blueprint5.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="notifications"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint5.NavbarGroup>
</Blueprint5.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading and AdminPanel NavLinks render for Role.Admin 1`] = `
<Blueprint5.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint5.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="flame"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="lightbulb"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="predictive-analysis"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="comparison"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="manual"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint5.NavbarGroup>
  <Blueprint5.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Ground Control"
      to="/courses/0/groundcontrol"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="satellite"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Ground Control
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Dashboard"
      to="/courses/0/dashboard"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="globe"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Dashboard
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Sourcereel"
      to="/courses/0/sourcereel"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="mobile-video"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Sourcereel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Grading"
      to="/courses/0/grading"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="endorsed"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Grading
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Game Simulator"
      to="/courses/0/gamesimulator"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="crown"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Game Simulator
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Admin Panel"
      to="/courses/0/adminpanel"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="settings"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Admin Panel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint5.Icon
        autoLoad={true}
        icon="notifications"
        tagName="span"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint5.NavbarGroup>
</Blueprint5.Navbar>
`;
